# pydantic-translations

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
locales/: de.po  en.po  es.po  fr.po  it.po  nl.po  ru.po  zh_cn.po
pydantic_translations/: __init__.py  _constants.py  _messages.py  _translate.py  _translator.py
pydantic_translations/locales/: de.mo  en-US.mo  en.mo  es.mo  fr.mo  it.mo  nl.mo  ru-RU.mo  ru.mo  zh_cn.mo
tests/: test_messages.py  test_translate.py
