[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydantic-translations"
authors = [
    {name = "Gram", email = "git@orsinium.dev"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
keywords = [
    "mypy",
    "typing",
    "annotations",
    "type annotations",
]
dependencies = [
    "l10n",
    "pydantic >=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "flake8",
    "isort",
    "mypy",
    "unify",
]
l10n = [
    "l10n[cli]",
    "mypy",
]

[project.urls]
Source = "https://github.com/orsinium-labs/pydantic-translations"

[tool.flit.module]
name = "pydantic_translations"

[tool.mypy]
files = ["pydantic_translations"]
python_version = 3.8
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.pytest.ini_options]
addopts = [
    "--cov=pydantic_translations",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=40",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "    pass",
    "except ImportError:",
]

[tool.coverage.run]
branch = true
